--- a/publican/datadir/Common_Content/common/fa-IR/Conventions.po
+++ b/publican/datadir/Common_Content/common/fa-IR/Conventions.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2009-07-27T05:14:21\n"
+"POT-Creation-Date: 2009-12-01T23:44:40\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -139,8 +139,9 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid ""
-"Choose <guimenu>System &#62; Preferences &#62; Mouse</guimenu> from the main "
-"menu bar to launch <application>Mouse Preferences</application>. In the "
+"Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
+"guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
+"bar to launch <application>Mouse Preferences</application>. In the "
 "<guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</"
 "guilabel> check box and click <guibutton>Close</guibutton> to switch the "
 "primary mouse button from the left to the right (making the mouse suitable "
@@ -151,16 +152,18 @@ msgstr ""
 #, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
-"choose <guimenu>Applications &#62; Accessories &#62; Character Map</guimenu> "
-"from the main menu bar. Next, choose <guimenu>Search &#62; Find&hellip;</"
-"guimenu> from the <application>Character Map</application> menu bar, type "
-"the name of the character in the <guilabel>Search</guilabel> field and click "
+"choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
+"guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> from the "
+"main menu bar. Next, choose <menuchoice><guimenu>Search</"
+"guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> from the "
+"<application>Character Map</application> menu bar, type the name of the "
+"character in the <guilabel>Search</guilabel> field and click "
 "<guibutton>Next</guibutton>. The character you sought will be highlighted in "
 "the <guilabel>Character Table</guilabel>. Double-click this highlighted "
 "character to place it in the <guilabel>Text to copy</guilabel> field and "
 "then click the <guibutton>Copy</guibutton> button. Now switch back to your "
-"document and choose <guimenu>Edit &#62; Paste</guimenu> from the "
-"<application>gedit</application> menu bar."
+"document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
+"guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 
 #. Tag: para
@@ -170,16 +173,6 @@ msgid ""
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
-msgstr ""
-
-#. Tag: para
-#, no-c-format
-msgid ""
-"Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-"through a menu and its sub-menus. This avoids difficult-to-follow phrasing "
-"such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-"<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-"menu of the main menu bar&#39;."
 msgstr ""
 
 #. Tag: para
@@ -244,14 +237,7 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid ""
-"When the Apache HTTP Server accepts requests, it dispatches child processes "
-"or threads to handle them. This group of child processes or threads is known "
-"as a <firstterm>server-pool</firstterm>. Under Apache HTTP Server 2.0, the "
-"responsibility for creating and maintaining these server-pools has been "
-"abstracted to a group of modules called <firstterm>Multi-Processing Modules</"
-"firstterm> (<firstterm>MPMs</firstterm>). Unlike other modules, only one "
-"module from the MPM group can be loaded by the Apache HTTP Server."
+msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
 msgstr ""
 
 #. Tag: title
@@ -315,8 +301,8 @@ msgstr ""
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled &#39;Important&#39; "
-"won&#39;t cause data loss but may cause irritation and frustration."
+"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"data loss but may cause irritation and frustration."
 msgstr ""
 
 #. Tag: title
